--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
         "dotenv": "^7.0.0",
         "express": "^4.16.4",
         "http": "0.0.0",
-        "socket.io": "^2.2.0",
+        "socket.io": "^2.2.0"
     }
 }
