--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "dotenv": "^7.0.0",
+        "ejs": "^2.7.1",
         "express": "^4.16.4",
         "http": "0.0.0",
         "socket.io": "^2.2.0",
